[tool.poetry]
name = "tageecoin"
version = "0.1.0"
description = ""
authors = ["Maosen <maosen@tagee.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
structlog = "^22.3.0"
more-itertools = "^9.1.0"
marshmallow = "^3.19.0"
marshmallow-oneofschema = "^3.0.1"
pynacl = "^1.5.0"
aiohttp = "^3.8.4"
pytest = "^7.2.2"
black = "^23.1.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"
pytest-faker = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
